# kvmp

./: .gitignore  Dockerfile  Makefile  README.md  cat  kvm.sh  output.txt  pyproject.toml  tailwind.config.js
data/: postmaster.pid
data/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2841  pg_internal.init
data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16389  16392  2224  2579  2604  2606  2608  2610  2615  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2684  2685  2696  2699  2701  2702  2703  2704  (+5 more)
data/base/4/: 2619
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
data/pg_xact/: 0000
db/migrations/: 20230111221530_create_users_table.sql  20230112141624_create_servers_table.sql  20230125204741_create_vm_info_table.sql  20230125225922_create_table_xml_templates.sql
kvmp/: celery.py  config.py  control_panel.py  db.py  instance.py  kvm.py  servers.py  ssh.py
kvmp/templates/: 404.html  add_server.html  add_vm.html  base.html  edit_server.html  form.html  icons.html  index.html  instance.html  login.html  profile.html  security.html  ubuntu_22_04.xml
tests/: test_db.py  test_kvm.py
xml/: ubuntu22.04.xml
