[tool.poetry]
name = "kvmp"
version = "0.1.0"
description = "KVM manager"
authors = ["Recursive Labs LTD"]
license = "Copyright (C) 2022"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
records = "0.5.3"
psycopg2 = "^2.9.5"
libvirt-python = "8.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.12b0"
# commitizen = "^2.20.4"
# pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
